--- a/src/about/About.css
+++ b/src/about/About.css
@@ -4,12 +4,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000000; 
+    background-color: #bda6a6; 
     color: #906b6b;
 }
 
 :root {
-    --primary-color: #000000; 
+    --primary-color: #514444; 
     --secondary-color: #fdfdfd; 
 }
 
